# Job_Tracker_with_ATS_Score

./: .gitignore  CMakeLists.txt  README.md  c_cpp_properties.json  settings.json
include/: AddJob.hpp  DatabaseInit.hpp  DeleteEntry.hpp  EditEntry.hpp  ListJobs.hpp  ResumeMatcher.hpp  utils.hpp
src/: AddJob.cpp  DatabaseInit.cpp  DeleteEntry.cpp  EditEntry.cpp  ListJobs.cpp  ResumeMatcher.cpp  build.bat  main.cpp  matcher_api.py  utils.cpp
